fix: jumping search bar during loading of products

--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -189,7 +189,7 @@
             display: flex;
             flex-direction: row;
 
-            overflow: auto;
+            overflow: scroll;
 
             border-left: 1pt solid #444444;
             border-right: 1pt solid #444444;
